--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "grapesjs-text-change",
   "version": "0.1.2",
+  "packageManager": "pnpm@9.15.0",
   "description": "Reliable text input listener for GrapesJS canvas",
   "main": "dist/index.cjs",
   "module": "dist/index.mjs",
