ci: add build for demo

--- a/demo/package.json
+++ b/demo/package.json
@@ -2,7 +2,8 @@
   "name": "grapesjs-text-change-demo",
   "private": true,
   "scripts": {
-    "dev": "vite"
+    "dev": "vite",
+    "build": "vite build"
   },
   "dependencies": {
     "grapesjs": "^0.22.0",
